--- a/public/pages/includes/navbar.ejs
+++ b/public/pages/includes/navbar.ejs
@@ -38,6 +38,6 @@
                 </li>
             </ul>
         </div>
-        <button type="button" class="btn collapse navbar-collapse mt-lg-0 mt-2" id="login-btn"><span
-                style="margin-left: 6px;">Login</span></button>
+        <a class="btn collapse navbar-collapse mt-lg-0 mt-2" id="login-btn" href="/login"><span
+                style="margin-left: 6px;">Login</span></a>
     </nav>
