--- a/public/pages/artisticEvent.ejs
+++ b/public/pages/artisticEvent.ejs
@@ -1,5 +1,5 @@
 <%- include('includes/head.ejs') %>
-     <link rel="stylesheet" href="../assets/css/artisticEvent.css">
+     <link rel="stylesheet" href="/css/artisticEvent.css">
     <title>Event Name</title>
 </head>
 
@@ -22,9 +22,9 @@
                 <li data-target="#slider" data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner" role="listbox">
-                <div class="carousel-item active" style="background-image: url(../assets/images/chicago.jpg);"></div>
-                <div class="carousel-item" style="background-image: url(../assets/images/chicago.jpg);"></div>
-                <div class="carousel-item" style="background-image: url(../assets/images/chicago.jpg);"></div>
+                <div class="carousel-item active" style="background-image: url(/images/chicago.jpg);"></div>
+                <div class="carousel-item" style="background-image: url(/images/chicago.jpg);"></div>
+                <div class="carousel-item" style="background-image: url(/images/chicago.jpg);"></div>
             </div>
             <a class="carousel-control-prev" href="#slider" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -46,19 +46,19 @@
                     <div class="row d-flex justify-content-center">
                         <div class="artist-box">
                             <a href="#">
-                                <img class="artist-img" src="../assets/images/HarryPotter.jpg">
+                                <img class="artist-img" src="/images/HarryPotter.jpg">
                             </a>
                             <p class="wheat-item a-name">NameName</p>
                         </div>
                         <div class="artist-box">
                             <a href="#">
-                                <img class="artist-img" src="../assets/images/HarryPotter.jpg">
+                                <img class="artist-img" src="/images/HarryPotter.jpg">
                             </a>
                             <p class="wheat-item a-name">NameName</p>
                         </div>
                         <div class="artist-box">
                             <a href="#">
-                                <img class="artist-img" src="../assets/images/HarryPotter.jpg">
+                                <img class="artist-img" src="/images/HarryPotter.jpg">
                             </a>
                             <p class="wheat-item a-name">NameName</p>
                         </div>
