--- a/public/pages/registration.ejs
+++ b/public/pages/registration.ejs
@@ -1,5 +1,5 @@
 <%- include('includes/head.ejs') %>
-    <link rel="stylesheet" href="../assets/css/login.css">
+    <link rel="stylesheet" href="/css/login.css">
     <title>Registration Page</title>
 </head>
 
