--- a/public/pages/performerGroup.ejs
+++ b/public/pages/performerGroup.ejs
@@ -8,59 +8,71 @@
 
     <nav class="crumb" aria-label="breadcrumb">
         <ol class="breadcrumb crumb">
-            <li class="breadcrumb-item" aria-current="page">Home</li>
+            <li class="breadcrumb-item" aria-current="page"><a class="bc-item" href="#">Home</a></li>
             <li class="breadcrumb-item bc-active" aria-current="page">All Performers</li>
         </ol>
     </nav>
 
     <div class="container">
         <div class="row">
-            <div class="col"></div>
-            <div class="col">
-                <div class="row centralized">
-                    <h2>Single Artists</h2>
+            <div class="col-2"></div>
+            <div class="col-8">
+                <div class="d-flex flex-row justify-content-center">
+                    <h1 class="title">Single Artists</h1>
                 </div>
                 <div class="row">
-                    <div class="wrapper content-left">
-                        <img src="/images/HarryPotter.jpg" alt="First Artist">
-                        <p>Name Surname</p>
+                    <div class="wrapper">
+                        <div class="row">
+                            <img class="performer-img" src="/images/HarryPotter.jpg" alt="First Artist">
+                            <h2 class="performer-name"><a class="performer-link" href="#">Name Surname</a></h2>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="wrapper content-left">
-                        <img src="/images/HarryPotter.jpg" alt="First Artist">
-                        <p>Name Surname</p>
+                    <div class="wrapper">
+                        <div class="row">
+                            <img class="performer-img" src="/images/HarryPotter.jpg" alt="First Artist">
+                            <h2 class="performer-name"><a class="performer-link" href="#">Name Surname</a></h2>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="wrapper content-left">
-                        <img src="/images/HarryPotter.jpg" alt="First Artist">
-                        <p>Name Surname</p>
+                    <div class="wrapper">
+                        <div class="row">
+                            <img class="performer-img" src="/images/HarryPotter.jpg" alt="First Artist">
+                            <h2 class="performer-name"><a class="performer-link" href="#">Name Surname</a></h2>
+                        </div>
                     </div>
                 </div>
-                <div class="row centralized">
-                    <h2>Companies</h2>
+                <div class="d-flex flex-row justify-content-center">
+                    <h1 class="title">Companies</h1>
                 </div>
                 <div class="row">
-                    <div class="wrapper content-left">
-                        <img src="/images/HarryPotter.jpg" alt="First Artist">
-                        <p>Company Name</p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="wrapper content-left">
-                        <img src="/images/HarryPotter.jpg" alt="First Artist">
-                        <p>Company Name</p>
+                    <div class="wrapper">
+                        <div class="row">
+                            <img class="performer-img" src="/images/HarryPotter.jpg" alt="First Artist">
+                            <h2 class="performer-name"><a class="performer-link" href="#">Name Surname</a></h2>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="wrapper content-left">
-                        <img src="/images/HarryPotter.jpg" alt="First Artist">
-                        <p>Company Name</p>
+                    <div class="wrapper">
+                        <div class="row">
+                            <img class="performer-img" src="/images/HarryPotter.jpg" alt="First Artist">
+                            <h2 class="performer-name"><a class="performer-link" href="#">Name Surname</a></h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="wrapper">
+                        <div class="row">
+                            <img class="performer-img" src="/images/HarryPotter.jpg" alt="First Artist">
+                            <h2 class="performer-name"><a class="performer-link" href="#">Name Surname</a></h2>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col"></div>
+            <div class="col-2"></div>
         </div>
     </div>
 
