--- a/public/pages/performerGroup.ejs
+++ b/public/pages/performerGroup.ejs
@@ -20,7 +20,7 @@
                 <div class="d-flex flex-row justify-content-center">
                     <h1 class="title">Single Artists</h1>
                 </div>
-                <div class="row">
+                <div class="d-flex flex-row justify-content-center">
                     <div class="wrapper">
                         <div class="row">
                             <img class="performer-img" src="/images/HarryPotter.jpg" alt="First Artist">
@@ -28,7 +28,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="d-flex flex-row justify-content-center">
                     <div class="wrapper">
                         <div class="row">
                             <img class="performer-img" src="/images/HarryPotter.jpg" alt="First Artist">
@@ -36,7 +36,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="d-flex flex-row justify-content-center">
                     <div class="wrapper">
                         <div class="row">
                             <img class="performer-img" src="/images/HarryPotter.jpg" alt="First Artist">
@@ -47,7 +47,7 @@
                 <div class="d-flex flex-row justify-content-center">
                     <h1 class="title">Companies</h1>
                 </div>
-                <div class="row">
+                <div class="d-flex flex-row justify-content-center">
                     <div class="wrapper">
                         <div class="row">
                             <img class="performer-img" src="/images/HarryPotter.jpg" alt="First Artist">
@@ -55,7 +55,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="d-flex flex-row justify-content-center">
                     <div class="wrapper">
                         <div class="row">
                             <img class="performer-img" src="/images/HarryPotter.jpg" alt="First Artist">
@@ -63,7 +63,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="d-flex flex-row justify-content-center">
                     <div class="wrapper">
                         <div class="row">
                             <img class="performer-img" src="/images/HarryPotter.jpg" alt="First Artist">
