--- a/public/pages/eventsByType.ejs
+++ b/public/pages/eventsByType.ejs
@@ -9,7 +9,8 @@
     <nav class="crumb" aria-label="breadcrumb">
         <ol class="breadcrumb crumb">
             <li class="breadcrumb-item" aria-current="page"><a class="bc-item" href="#">Home</a></li>
-            <li class="breadcrumb-item bc-active" aria-current="page">All Performers</li>
+            <li class="breadcrumb-item" aria-current="page"><a class="bc-item" href="#">Events' Types</a></li>
+            <li class="breadcrumb-item bc-active" aria-current="page">Events By Type X</li>
         </ol>
     </nav>
 
@@ -18,57 +19,165 @@
             <div class="col-2"></div>
             <div class="col-8">
                 <div class="d-flex flex-row justify-content-center">
-                    <h1 class="title">Single Artists</h1>
+                    <h1 class="title">All Type X Events</h1>
                 </div>
-                <div class="d-flex flex-row justify-content-center">
-                    <div class="wrapper">
-                        <div class="row">
-                            <img class="performer-img" src="/images/HarryPotter.jpg" alt="First Artist">
-                            <h2 class="performer-name"><a class="performer-link" href="#">Name Surname</a></h2>
+                <div class="s-wrapper centralized">
+                    <div class="quote-wrapper">
+                        <h1 class="title">Event's Name</h1>
+                        <p class="subtitle">Have you ever dreamt of singing along the notes of Boemian Rapsody in front
+                            of a
+                            huge crowd chanting your name? If that's the case, this type of of event is for you. Let the
+                            perforferms guide you into an interactive experience where you can just feel like an artist
+                            yourself. </p>
+                    </div>
+
+                    <div id="slider-container" class="container">
+                        <div id="slider" class="carousel slide">
+                            <ol class="carousel-indicators">
+                                <li data-target="#slider" data-slide-to="0" class="active"></li>
+                                <li data-target="#slider" data-slide-to="1"></li>
+                                <li data-target="#slider" data-slide-to="2"></li>
+                            </ol>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="/images/chicago.jpg" alt="First slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="/images/la.jpg" alt="Second slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="/images/ny.jpg" alt="Third slide">
+                                </div>
+                            </div>
+                            <a class="carousel-control-prev" href="#slider" role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#slider" role="button" data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
                         </div>
                     </div>
-                </div>
-                <div class="d-flex flex-row justify-content-center">
-                    <div class="wrapper">
-                        <div class="row">
-                            <img class="performer-img" src="/images/HarryPotter.jpg" alt="First Artist">
-                            <h2 class="performer-name"><a class="performer-link" href="#">Name Surname</a></h2>
-                        </div>
+
+                    <hr class="hr">
+
+                    <div class="d-flex flex-row justify-content-center">
+                        <h2 class="subtitle">Featuring:</h2>
+                    </div>
+                    <div class="d-flex flex-row justify-content-center">
+                        <img class="performer-img" src="/images/HarryPotter.jpg">
+                        <h4 class="title"><a href="#">Derren Brown</a></h2>
+                    </div>
+                    <div class="d-flex flex-row justify-content-center">
+                        <img class="performer-img" src="/images/HarryPotter.jpg">
+                        <h4 class="title"><a href="#">Derren Brown</a></h2>
                     </div>
                 </div>
-                <div class="d-flex flex-row justify-content-center">
-                    <div class="wrapper">
-                        <div class="row">
-                            <img class="performer-img" src="/images/HarryPotter.jpg" alt="First Artist">
-                            <h2 class="performer-name"><a class="performer-link" href="#">Name Surname</a></h2>
+                <div class="s-wrapper centralized">
+                    <div class="quote-wrapper">
+                        <h1 class="title">Event's Name</h1>
+                        <p class="subtitle">Have you ever dreamt of singing along the notes of Boemian Rapsody in front
+                            of a
+                            huge crowd chanting your name? If that's the case, this type of of event is for you. Let the
+                            perforferms guide you into an interactive experience where you can just feel like an artist
+                            yourself. </p>
+                    </div>
+
+                    <div id="slider-container" class="container">
+                        <div id="slider" class="carousel slide">
+                            <ol class="carousel-indicators">
+                                <li data-target="#slider" data-slide-to="0" class="active"></li>
+                                <li data-target="#slider" data-slide-to="1"></li>
+                                <li data-target="#slider" data-slide-to="2"></li>
+                            </ol>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="/images/chicago.jpg" alt="First slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="/images/la.jpg" alt="Second slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="/images/ny.jpg" alt="Third slide">
+                                </div>
+                            </div>
+                            <a class="carousel-control-prev" href="#slider" role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#slider" role="button" data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
                         </div>
                     </div>
-                </div>
-                <div class="d-flex flex-row justify-content-center">
-                    <h1 class="title">Companies</h1>
-                </div>
-                <div class="d-flex flex-row justify-content-center">
-                    <div class="wrapper">
-                        <div class="row">
-                            <img class="performer-img" src="/images/HarryPotter.jpg" alt="First Artist">
-                            <h2 class="performer-name"><a class="performer-link" href="#">Name Surname</a></h2>
-                        </div>
+
+                    <hr class="hr">
+
+                    <div class="d-flex flex-row justify-content-center">
+                        <h2 class="subtitle">Featuring:</h2>
+                    </div>
+                    <div class="d-flex flex-row justify-content-center">
+                        <img class="performer-img" src="/images/HarryPotter.jpg">
+                        <h4 class="title"><a href="#">Derren Brown</a></h2>
+                    </div>
+                    <div class="d-flex flex-row justify-content-center">
+                        <img class="performer-img" src="/images/HarryPotter.jpg">
+                        <h4 class="title"><a href="#">Derren Brown</a></h2>
                     </div>
                 </div>
-                <div class="d-flex flex-row justify-content-center">
-                    <div class="wrapper">
-                        <div class="row">
-                            <img class="performer-img" src="/images/HarryPotter.jpg" alt="First Artist">
-                            <h2 class="performer-name"><a class="performer-link" href="#">Name Surname</a></h2>
+                <div class="s-wrapper centralized">
+                    <div class="quote-wrapper">
+                        <h1 class="title">Event's Name</h1>
+                        <p class="subtitle">Have you ever dreamt of singing along the notes of Boemian Rapsody in front
+                            of a
+                            huge crowd chanting your name? If that's the case, this type of of event is for you. Let the
+                            perforferms guide you into an interactive experience where you can just feel like an artist
+                            yourself. </p>
+                    </div>
+
+                    <div id="slider-container" class="container">
+                        <div id="slider" class="carousel slide">
+                            <ol class="carousel-indicators">
+                                <li data-target="#slider" data-slide-to="0" class="active"></li>
+                                <li data-target="#slider" data-slide-to="1"></li>
+                                <li data-target="#slider" data-slide-to="2"></li>
+                            </ol>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="/images/chicago.jpg" alt="First slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="/images/la.jpg" alt="Second slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="/images/ny.jpg" alt="Third slide">
+                                </div>
+                            </div>
+                            <a class="carousel-control-prev" href="#slider" role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#slider" role="button" data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
                         </div>
                     </div>
-                </div>
-                <div class="d-flex flex-row justify-content-center">
-                    <div class="wrapper">
-                        <div class="row">
-                            <img class="performer-img" src="/images/HarryPotter.jpg" alt="First Artist">
-                            <h2 class="performer-name"><a class="performer-link" href="#">Name Surname</a></h2>
-                        </div>
+
+                    <hr class="hr">
+
+                    <div class="d-flex flex-row justify-content-center">
+                        <h2 class="subtitle">Featuring:</h2>
+                    </div>
+                    <div class="d-flex flex-row justify-content-center">
+                        <img class="performer-img" src="/images/HarryPotter.jpg">
+                        <h4 class="title"><a href="#">Derren Brown</a></h2>
+                    </div>
+                    <div class="d-flex flex-row justify-content-center">
+                        <img class="performer-img" src="/images/HarryPotter.jpg">
+                        <h4 class="title"><a href="#">Derren Brown</a></h2>
                     </div>
                 </div>
             </div>
