--- a/public/assets/css/eventsByType.css
+++ b/public/assets/css/eventsByType.css
@@ -80,7 +80,8 @@
 /* performer */
 
 .performer-row {
-    margin-bottom: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .performer-img {
