--- a/public/pages/eventsByType.ejs
+++ b/public/pages/eventsByType.ejs
@@ -118,11 +118,11 @@
                     <div class="d-flex flex-row justify-content-center">
                         <h2 class="subtitle">Featuring:</h2>
                     </div>
-                    <div class="d-flex flex-row justify-content-center">
+                    <div class="performer-row d-flex flex-row justify-content-center">
                         <img class="performer-img" src="/images/HarryPotter.jpg">
                         <h4 class="title"><a href="#">Derren Brown</a></h2>
                     </div>
-                    <div class="d-flex flex-row justify-content-center">
+                    <div class="performer-row d-flex flex-row justify-content-center">
                         <img class="performer-img" src="/images/HarryPotter.jpg">
                         <h4 class="title"><a href="#">Derren Brown</a></h2>
                     </div>
@@ -171,11 +171,11 @@
                     <div class="d-flex flex-row justify-content-center">
                         <h2 class="subtitle">Featuring:</h2>
                     </div>
-                    <div class="d-flex flex-row justify-content-center">
+                    <div class="performer-row d-flex flex-row justify-content-center">
                         <img class="performer-img" src="/images/HarryPotter.jpg">
                         <h4 class="title"><a href="#">Derren Brown</a></h2>
                     </div>
-                    <div class="d-flex flex-row justify-content-center">
+                    <div class="performer-row d-flex flex-row justify-content-center">
                         <img class="performer-img" src="/images/HarryPotter.jpg">
                         <h4 class="title"><a href="#">Derren Brown</a></h2>
                     </div>
