--- a/public/pages/eventsByType.ejs
+++ b/public/pages/eventsByType.ejs
@@ -67,11 +67,11 @@
                     </div>
                     <div class="performer-row d-flex flex-row justify-content-center">
                         <img class="performer-img" src="/images/HarryPotter.jpg">
-                        <h4 class="title"><a href="#">Derren Brown</a></h2>
+                        <h4 class="title performer-name"><a href="#">Derren Brown</a></h2>
                     </div>
                     <div class="performer-row d-flex flex-row justify-content-center">
                         <img class="performer-img" src="/images/HarryPotter.jpg">
-                        <h4 class="title"><a href="#">Derren Brown</a></h2>
+                        <h4 class="title performer-name"><a href="#">Derren Brown</a></h2>
                     </div>
                 </div>
                 <div class="s-wrapper centralized">
@@ -120,11 +120,11 @@
                     </div>
                     <div class="performer-row d-flex flex-row justify-content-center">
                         <img class="performer-img" src="/images/HarryPotter.jpg">
-                        <h4 class="title"><a href="#">Derren Brown</a></h2>
+                        <h4 class="title performer-name"><a href="#">Derren Brown</a></h2>
                     </div>
                     <div class="performer-row d-flex flex-row justify-content-center">
                         <img class="performer-img" src="/images/HarryPotter.jpg">
-                        <h4 class="title"><a href="#">Derren Brown</a></h2>
+                        <h4 class="title performer-name"><a href="#">Derren Brown</a></h2>
                     </div>
                 </div>
                 <div id="last-wrapper" class="s-wrapper centralized">
@@ -173,11 +173,11 @@
                     </div>
                     <div class="performer-row d-flex flex-row justify-content-center">
                         <img class="performer-img" src="/images/HarryPotter.jpg">
-                        <h4 class="title"><a href="#">Derren Brown</a></h2>
+                        <h4 class="title performer-name"><a href="#">Derren Brown</a></h2>
                     </div>
                     <div class="performer-row d-flex flex-row justify-content-center">
                         <img class="performer-img" src="/images/HarryPotter.jpg">
-                        <h4 class="title"><a href="#">Derren Brown</a></h2>
+                        <h4 class="title performer-name"><a href="#">Derren Brown</a></h2>
                     </div>
                 </div>
             </div>
