--- a/public/assets/css/eventsByType.css
+++ b/public/assets/css/eventsByType.css
@@ -89,4 +89,9 @@
     border: solid 4px wheat;
     height: 130px;
     width: 130px;
+    margin-right: 20px;
+}
+
+.performer-name {
+    margin-top: 50px;
 }
