--- a/public/pages/eventsByType.ejs
+++ b/public/pages/eventsByType.ejs
@@ -19,7 +19,7 @@
             <div class="col-2"></div>
             <div class="col-8">
                 <div class="d-flex flex-row justify-content-center">
-                    <h1 class="title">All Type X Events</h1>
+                    <h1>All Type X Events</h1>
                 </div>
                 <div class="s-wrapper centralized">
                     <div class="quote-wrapper">
