--- a/public/pages/registration.ejs
+++ b/public/pages/registration.ejs
@@ -25,7 +25,7 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fas fa-envelope"></i></span>
                                 </div>
-                                <input type="text" class="form-control" placeholder="e-mail">
+                                <input id="emailText" type="text" class="form-control" placeholder="e-mail">
 
                             </div>
                             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
@@ -33,26 +33,23 @@
                         </div>
                         <div class="input-group form-group">
                             <div class="input-group-prepend">
-                                <span class="input-group-text"><i class="fas fa-user-alt"></i></span>
-                            </div>
-                            <input type="text" class="form-control" placeholder="username">
-
-                        </div>
-                        <div class="input-group form-group">
-                            <div class="input-group-prepend">
                                 <span class="input-group-text"><i class="fas fa-key"></i></span>
                             </div>
-                            <input type="text" class="form-control" placeholder="password">
+                            <input id="passText" type="password" class="form-control" placeholder="password">
 
                         </div>
                         <div class="form-group">
-                            <input type="submit" value="Register" class="btn float-right card-item">
+                            <input id="registerBtn" type="button" value="Register" class="btn float-right card-item">
+                        </div>
+
+                        <div class="form-group">
+                            <p id="statusText" type="" value="dsadsa" class="text-warning">fdsfs</p>
                         </div>
                     </form>
                 </div>
                 <div class="card-footer black-card">
                     <div class="d-flex justify-content-center links">
-                        <span class="wheat-item">Already have an account?&nbsp;</span><a href="#" class="card-link">
+                        <span class="wheat-item">Already have an account?&nbsp;</span><a href="/registration" class="card-link">
                             Log&nbsp;in!</a>
                     </div>
                 </div>
@@ -61,6 +58,8 @@
     </div>
 
     <%- include('includes/footer.ejs') %>
+    <script src ="/js/script.js"></script>
+    <script src = "/js/registration.js"></script>
 </body>
 
 </html>
