small fix in registration page

--- a/public/pages/login.ejs
+++ b/public/pages/login.ejs
@@ -40,7 +40,7 @@
                 <div class="card-footer black-card">
                     <div class="d-flex justify-content-center links">
                         <span class="wheat-item">Don't have an account yet?</span>&nbsp;&nbsp;<a class="card-link"
-                            href="#">Sign
+                            href="/registration">Sign
                             Up</a>
                     </div>
                 </div>
