--- a/public/pages/registration.ejs
+++ b/public/pages/registration.ejs
@@ -43,13 +43,13 @@
                         </div>
 
                         <div class="form-group">
-                            <p id="statusText" type="" value="dsadsa" class="text-warning">fdsfs</p>
+                            <p id="statusText" type="" value="dsadsa" class="text-warning"></p>
                         </div>
                     </form>
                 </div>
                 <div class="card-footer black-card">
                     <div class="d-flex justify-content-center links">
-                        <span class="wheat-item">Already have an account?&nbsp;</span><a href="/registration" class="card-link">
+                        <span class="wheat-item">Already have an account?&nbsp;</span><a href="/login" class="card-link">
                             Log&nbsp;in!</a>
                     </div>
                 </div>
