--- a/public/pages/calendar.ejs
+++ b/public/pages/calendar.ejs
@@ -13,66 +13,12 @@
         </ol>
     </nav>
 
-    <div class="container">
-        <div class="d-flex flex-row justify-content-center">
-            <div class="card">
-                <div class="card-header">
-                    <h2 class="title">Sunday, 28 August</h2>
-                </div>
-                <div class="card-body">
-                    <hr class="line">
-                    <h3><a class="card-link" href="#">Event 1 </a><span class="date">- 3 pm</span></h3>
-                    <h3><a class="card-link" href="#">Event 2 </a><span class="date">- 3 pm</span></h3>
-                    <h3><a class="card-link" href="#">Event 3 </a><span class="date">- 3 pm</span></h3>
-                    <h3><a class="card-link" href="#">Event 4 </a><span class="date">- 3 pm</span></h3>
-                </div>
-            </div>
-        </div>
-        <div class="d-flex flex-row justify-content-center">
-            <div class="card">
-                <div class="card-header">
-                    <h2 class="title">Sunday, 28 August</h2>
-                </div>
-                <div class="card-body">
-                    <hr class="line">
-                    <h3><a class="card-link" href="#">Event 1 </a><span class="date">- 3 pm</span></h3>
-                    <h3><a class="card-link" href="#">Event 2 </a><span class="date">- 3 pm</span></h3>
-                    <h3><a class="card-link" href="#">Event 3 </a><span class="date">- 3 pm</span></h3>
-                    <h3><a class="card-link" href="#">Event 4 </a><span class="date">- 3 pm</span></h3>
-                </div>
-            </div>
-        </div>
-        <div class="d-flex flex-row justify-content-center">
-            <div class="card">
-                <div class="card-header">
-                    <h2 class="title">Sunday, 28 August</h2>
-                </div>
-                <div class="card-body">
-                    <hr class="line">
-                    <h3><a class="card-link" href="#">Event 1 </a><span class="date">- 3 pm</span></h3>
-                    <h3><a class="card-link" href="#">Event 2 </a><span class="date">- 3 pm</span></h3>
-                    <h3><a class="card-link" href="#">Event 3 </a><span class="date">- 3 pm</span></h3>
-                    <h3><a class="card-link" href="#">Event 4 </a><span class="date">- 3 pm</span></h3>
-                </div>
-            </div>
-        </div>
-        <div class="d-flex flex-row justify-content-center">
-            <div class="card">
-                <div class="card-header">
-                    <h2 class="title">Sunday, 28 August</h2>
-                </div>
-                <div class="card-body">
-                    <hr class="line">
-                    <h3><a class="card-link" href="#">Event 1 </a><span class="date">- 3 pm</span></h3>
-                    <h3><a class="card-link" href="#">Event 2 </a><span class="date">- 3 pm</span></h3>
-                    <h3><a class="card-link" href="#">Event 3 </a><span class="date">- 3 pm</span></h3>
-                    <h3><a class="card-link" href="#">Event 4 </a><span class="date">- 3 pm</span></h3>
-                </div>
-            </div>
-        </div>
+    <div id="container" class="container">
     </div>
 
     <%- include('includes/footer.ejs') %>
+    <script src="/js/script.js"></script>
+    <script src="/js/calendar.js"></script>
 
 </body>
 
