--- a/public/pages/eventsTypes.ejs
+++ b/public/pages/eventsTypes.ejs
@@ -13,142 +13,13 @@
         </ol>
     </nav>
 
-    <div class="container">
-        <div class="s-wrapper centralized">
-            <div class="quote-wrapper">
-                <h1 class="title">Interactive Event</h1>
-                <p class="subtitle">Have you ever dreamt of singing along the notes of Boemian Rapsody in front of a
-                    huge crowd chanting your name? If that's the case, this type of of event is for you. Let the
-                    perforferms guide you into an interactive experience where you can just feel like an artist
-                    yourself. </p>
-            </div>
-
-            <div id="slider-container" class="container">
-                <div id="slider" class="carousel slide">
-                    <ol class="carousel-indicators">
-                        <li data-target="#slider" data-slide-to="0" class="active"></li>
-                        <li data-target="#slider" data-slide-to="1"></li>
-                        <li data-target="#slider" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="/images/chicago.jpg" alt="First slide">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="/images/la.jpg" alt="Second slide">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="/images/ny.jpg" alt="Third slide">
-                        </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#slider" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#slider" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
-            </div>
-
-            <hr class="hr">
-
-            <h4 class="footcard">Click <a href="#">here</a> to get to the list of events of this type taking place in
-                this festival!</h4>
-        </div>
-
-        <div class="s-wrapper centralized">
-            <div class="quote-wrapper">
-                <h1 class="title">Interactive Event</h1>
-                <p class="subtitle">Have you ever dreamt of singing along the notes of Boemian Rapsody in front of a
-                    huge crowd chanting your name? If that's the case, this type of of event is for you. Let the
-                    perforferms guide you into an interactive experience where you can just feel like an artist
-                    yourself. </p>
-            </div>
-
-            <div id="slider-container" class="container">
-                <div id="slider" class="carousel slide">
-                    <ol class="carousel-indicators">
-                        <li data-target="#slider" data-slide-to="0" class="active"></li>
-                        <li data-target="#slider" data-slide-to="1"></li>
-                        <li data-target="#slider" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="/images/chicago.jpg" alt="First slide">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="/images/la.jpg" alt="Second slide">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="/images/ny.jpg" alt="Third slide">
-                        </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#slider" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#slider" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
-            </div>
-
-            <hr class="hr">
-
-            <h4 class="footcard">Click <a href="#">here</a> to get to the list of events of this type taking place in
-                this festival!</h4>
-        </div>
-
-        <div id="last-wrapper" class="s-wrapper centralized">
-            <div class="quote-wrapper">
-                <h1 class="title">Interactive Event</h1>
-                <p class="subtitle">Have you ever dreamt of singing along the notes of Boemian Rapsody in front of a
-                    huge crowd chanting your name? If that's the case, this type of of event is for you. Let the
-                    perforferms guide you into an interactive experience where you can just feel like an artist
-                    yourself. </p>
-            </div>
-
-            <div id="slider-container" class="container">
-                <div id="slider" class="carousel slide">
-                    <ol class="carousel-indicators">
-                        <li data-target="#slider" data-slide-to="0" class="active"></li>
-                        <li data-target="#slider" data-slide-to="1"></li>
-                        <li data-target="#slider" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="/images/chicago.jpg" alt="First slide">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="/images/la.jpg" alt="Second slide">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="/images/ny.jpg" alt="Third slide">
-                        </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#slider" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#slider" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
-            </div>
-
-            <hr class="hr">
-
-            <h4 class="footcard">Click <a href="#">here</a> to get to the list of events of this type taking place in
-                this festival!</h4>
-        </div>
+    <div id="container" class="container">
+                       
     </div>
 
     <%- include('includes/footer.ejs') %>
-
+    <script src="/js/script.js"></script>
+    <script src="/js/eventsTypes.js"></script>
 </body>
 
 </html>
