--- a/public/pages/performer.ejs
+++ b/public/pages/performer.ejs
@@ -1,6 +1,6 @@
 <%- include('includes/head.ejs') %>
-    <link rel="stylesheet" href="/css/performer.css">
-    <title>*Performer's Name*</title>
+<link rel="stylesheet" href="/css/performer.css">
+<title>*Performer's Name*</title>
 </head>
 
 <body>
@@ -98,7 +98,7 @@
             <div class="col"></div>
             <div class="col-8">
                 <div class="description-wrapper centralized">
-                    <h2 class="title">Biography</h2>
+                    <h2 class="title">More About Derren Brown</h2>
                     <p>
                         Derren Brown was born in Croydon, London, on 27 February 1971, the son of Chris and Bob
                         Brown. He has a brother nine years his junior. He was privately educated at Whitgift School in
@@ -123,6 +123,36 @@
                         other
                         performers. Its first show was Brown's TV special, Pushed to the Edge.
                     </p>
+                </div>
+            </div>
+            <div class="col"></div>
+        </div>
+
+        <div class="row">
+            <div class="col"></div>
+            <div class="col-12">
+                <div class="centralized event-wrapper">
+                    <h2 class="title">Find Derren Brown Performing In:</h2>
+                    <div class="row d-flex justify-content-center">
+                        <div class="event-box">
+                            <a href="#">
+                                <img class="round-img" src="/images/HarryPotter.jpg">
+                            </a>
+                            <p class="wheat-item">Event1</p>
+                        </div>
+                        <div class="event-box">
+                            <a href="#">
+                                <img class="round-img" src="/images/HarryPotter.jpg">
+                            </a>
+                            <p class="wheat-item">Event2</p>
+                        </div>
+                        <div class="event-box">
+                            <a href="#">
+                                <img class="round-img" src="/images/HarryPotter.jpg">
+                            </a>
+                            <p class="wheat-item">Event3</p>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="col"></div>
