--- a/public/assets/css/performer.css
+++ b/public/assets/css/performer.css
@@ -1,3 +1,9 @@
+/* generics */
+
+.container {
+    padding-bottom: 30px;
+}
+
 /* performer card */
 
 .photo-container {
@@ -118,10 +124,21 @@ a.icoInstagram {
     border: solid 2px rgb(180, 165, 138);
 }
 
-/* performance images */
+/* related events */
 
-.display-img {
+.event-wrapper {
+    background-color: black;
+    border-radius: 5px;
+    border: solid 4px wheat;
+    padding-top: 20px;
+}
+
+.event-box {
+    padding: 20px;
+}
+
+.round-img {
     border-radius: 50%;
-    width: 200px;
-    height: 200px;
+    width: 140px;
+    height: 140px;
 }
