--- a/public/pages/contactUs.ejs
+++ b/public/pages/contactUs.ejs
@@ -8,7 +8,7 @@
     <nav class="crumb" aria-label="breadcrumb">
         <ol class="breadcrumb crumb">
             <li class="breadcrumb-item" aria-current="page"><a class="bc-item" href="#">Home</a></li>
-            <li class="breadcrumb-item bc-item" aria-current="page"><a class="bc-item" href="#">Contact Us</a></li>
+            <li class="breadcrumb-item bc-active" aria-current="page">Contact Us</li>
         </ol>
     </nav>
 
