--- a/public/assets/css/performer.css
+++ b/public/assets/css/performer.css
@@ -134,11 +134,20 @@ a.icoInstagram {
 }
 
 .event-box {
-    padding: 20px;
+    height: 200px;
+    width: 200px;
+    margin-top: 20px;
 }
 
 .round-img {
     border-radius: 50%;
     width: 140px;
     height: 140px;
+    border: solid 2px wheat;
+}
+
+.round-img:hover {
+    border-radius: 50%;
+    width: 160px;
+    height: 160px;
 }
