--- a/public/assets/css/performerGroup.css
+++ b/public/assets/css/performerGroup.css
@@ -3,7 +3,6 @@
     border: solid 4px wheat;
     width: 200px;
     height: 200px;
-    margin-right: 20px;
 }
 
 .row {
@@ -12,7 +11,6 @@
 }
 
 .performer-name {
-    margin-top: 70px;
     color: rgb(190, 166, 120);
 }
 
@@ -33,6 +31,13 @@
     border-radius: 5px;
     border: solid 4px wheat;
     width: 500px;
-    padding-left: 30px;
+    padding-top: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
     margin-top: 30px;
+}
+
+#title-row {
+    padding-top: 20px;
+    margin-top: 70px;
 }
