--- a/public/pages/performerGroup.ejs
+++ b/public/pages/performerGroup.ejs
@@ -21,54 +21,42 @@
                     <h1 class="title">Single Artists</h1>
                 </div>
                 <div class="d-flex flex-row justify-content-center">
-                    <div class="wrapper">
-                        <div class="row">
-                            <img class="performer-img" src="/images/HarryPotter.jpg" alt="First Artist">
-                            <h2 class="performer-name"><a class="performer-link" href="#">Name Surname</a></h2>
-                        </div>
+                    <div class="wrapper centralized">
+                        <img class="performer-img" src="/images/HarryPotter.jpg" alt="First Artist">
+                        <h2 class="performer-name"><a class="performer-link" href="#">Name Surname</a></h2>
                     </div>
                 </div>
                 <div class="d-flex flex-row justify-content-center">
-                    <div class="wrapper">
-                        <div class="row">
-                            <img class="performer-img" src="/images/HarryPotter.jpg" alt="First Artist">
-                            <h2 class="performer-name"><a class="performer-link" href="#">Name Surname</a></h2>
-                        </div>
+                    <div class="wrapper centralized">
+                        <img class="performer-img" src="/images/HarryPotter.jpg" alt="First Artist">
+                        <h2 class="performer-name"><a class="performer-link" href="#">Name Surname</a></h2>
                     </div>
                 </div>
                 <div class="d-flex flex-row justify-content-center">
-                    <div class="wrapper">
-                        <div class="row">
-                            <img class="performer-img" src="/images/HarryPotter.jpg" alt="First Artist">
-                            <h2 class="performer-name"><a class="performer-link" href="#">Name Surname</a></h2>
-                        </div>
+                    <div class="wrapper centralized">
+                        <img class="performer-img" src="/images/HarryPotter.jpg" alt="First Artist">
+                        <h2 class="performer-name"><a class="performer-link" href="#">Name Surname</a></h2>
                     </div>
                 </div>
-                <div class="d-flex flex-row justify-content-center">
+                <div id="title-row" class="d-flex flex-row justify-content-center">
                     <h1 class="title">Companies</h1>
                 </div>
                 <div class="d-flex flex-row justify-content-center">
-                    <div class="wrapper">
-                        <div class="row">
-                            <img class="performer-img" src="/images/HarryPotter.jpg" alt="First Artist">
-                            <h2 class="performer-name"><a class="performer-link" href="#">Name Surname</a></h2>
-                        </div>
+                    <div class="wrapper centralized">
+                        <img class="performer-img" src="/images/HarryPotter.jpg" alt="First Artist">
+                        <h2 class="performer-name"><a class="performer-link" href="#">Name Surname</a></h2>
                     </div>
                 </div>
                 <div class="d-flex flex-row justify-content-center">
-                    <div class="wrapper">
-                        <div class="row">
-                            <img class="performer-img" src="/images/HarryPotter.jpg" alt="First Artist">
-                            <h2 class="performer-name"><a class="performer-link" href="#">Name Surname</a></h2>
-                        </div>
+                    <div class="wrapper centralized">
+                        <img class="performer-img" src="/images/HarryPotter.jpg" alt="First Artist">
+                        <h2 class="performer-name"><a class="performer-link" href="#">Name Surname</a></h2>
                     </div>
                 </div>
                 <div class="d-flex flex-row justify-content-center">
-                    <div class="wrapper">
-                        <div class="row">
-                            <img class="performer-img" src="/images/HarryPotter.jpg" alt="First Artist">
-                            <h2 class="performer-name"><a class="performer-link" href="#">Name Surname</a></h2>
-                        </div>
+                    <div class="wrapper centralized">
+                        <img class="performer-img" src="/images/HarryPotter.jpg" alt="First Artist">
+                        <h2 class="performer-name"><a class="performer-link" href="#">Name Surname</a></h2>
                     </div>
                 </div>
             </div>
