--- a/public/pages/eventsByType.ejs
+++ b/public/pages/eventsByType.ejs
@@ -16,8 +16,8 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-2"></div>
-            <div class="col-8">
+            <div class="col-md-2"></div>
+            <div class="col-12 col-md-8">
                 <div class="d-flex flex-row justify-content-center">
                     <h1>All Type X Events</h1>
                 </div>
@@ -181,7 +181,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-2"></div>
+            <div class="col-md-2"></div>
         </div>
     </div>
 
