--- a/public/pages/reservationInfo.ejs
+++ b/public/pages/reservationInfo.ejs
@@ -35,9 +35,13 @@
                 <h2 class="title">How can you get the tickets for the event?</h2>
             </div>
             <div class="d-flex flex-row justify-content-center">
-                <h5 class="answer">You can book the tickets by clicking <a href="#">here</a>. The event is going to take
-                    place in Ocean
-                    Drive, Miami, Florida.</h5>
+                <h5 class="answer">To book the tickets you need to register on the site <a
+                        href="/registration">here</a>. Then you can select the event you want from the <a
+                        href="/registration">Calendar page</a> and click on the button GET YOUR TICKET. <br>
+                    You can than see your tickets in the <a href="/reservation">Reservation page</a><br>
+                    The event is
+                    going to take
+                    place in Ocean Drive, Miami, Florida.</h5>
             </div>
         </div>
     </div>
