--- a/public/pages/artisticEvent.ejs
+++ b/public/pages/artisticEvent.ejs
@@ -56,25 +56,8 @@
             <div class="col-12">
                 <div class="centralized artist-wrapper">
                     <h2 class="wheat-item">Other Events The Same Day:</h2>
-                    <div class="row d-flex justify-content-center">
-                        <div class="artist-box">
-                            <a href="#">
-                                <img class="artist-img" src="/images/HarryPotter.jpg">
-                            </a>
-                            <p class="wheat-item a-name">Event1</p>
-                        </div>
-                        <div class="artist-box">
-                            <a href="#">
-                                <img class="artist-img" src="/images/HarryPotter.jpg">
-                            </a>
-                            <p class="wheat-item a-name">Event2</p>
-                        </div>
-                        <div class="artist-box">
-                            <a href="#">
-                                <img class="artist-img" src="/images/HarryPotter.jpg">
-                            </a>
-                            <p class="wheat-item a-name">Event3</p>
-                        </div>
+                    <div id="eventsContainer" class="row d-flex justify-content-center">
+                        
                     </div>
                 </div>
             </div>
@@ -98,12 +81,7 @@
                 <div class="abstract centralized">
                     <h3>Abstract</h3>
                     <p id="abstract">
-                        content content content content content content content content content content content content
-                        content content content content content content content content content content content content
-                        content content content content content content content content content content content content
-                        content content content content content content content content content content content content
-                        content content content content content content content content content content content content
-                        content content content content content content content content content content content content
+                        
                     </p>
                 </div>
             </div>
