--- a/public/pages/home.ejs
+++ b/public/pages/home.ejs
@@ -1,5 +1,5 @@
 <%- include('includes/head.ejs') %>
-    <title>Home Page</title>
+<title>Home Page</title>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
 
     <%- include('includes/footer.ejs') %>
     <script src="/js/script.js"></script>
-    <!-- <script src="/js/postTest.js"></script> -->
+    <script src="/js/postTest.js"></script>
 </body>
 
 </html>
