--- a/public/pages/includes/navbar.ejs
+++ b/public/pages/includes/navbar.ejs
@@ -28,7 +28,7 @@
                     <a class="nav-link wheat-item wheat-link" href="/performers">Performers</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link wheat-item wheat-link" href="/company">Company</a>
+                    <a class="nav-link wheat-item wheat-link" href="/companies">Companies</a>
                 </li>
             </ul>
         </div>
