fixed some wrong hrefs

--- a/public/pages/reservationInfo.ejs
+++ b/public/pages/reservationInfo.ejs
@@ -37,7 +37,7 @@
             <div class="d-flex flex-row justify-content-center">
                 <h5 class="answer">To book the tickets you need to register on the site <a
                         href="/registration">here</a>. Then you can select the event you want from the <a
-                        href="/registration">Calendar page</a> and click on the button GET YOUR TICKET. <br>
+                        href="/calendar">Calendar page</a> and click on the button GET YOUR TICKET. <br>
                     You can than see your tickets in the <a href="/reservation">Reservation page</a><br>
                     The event is
                     going to take
