--- a/public/pages/includes/navbar.ejs
+++ b/public/pages/includes/navbar.ejs
@@ -1,5 +1,5 @@
     <nav class="navbar navbar-expand-lg">
-        <a id="logo" class="navbar-brand" href="#">
+        <a id="logo" class="navbar-brand" href="/">
             <i class="fa fa-dragon"></i>
         </a>
         <button class="navbar-toggler burger-menu" type="button" data-toggle="collapse" data-target=".navbar-collapse"
