--- a/public/pages/artisticEvent.ejs
+++ b/public/pages/artisticEvent.ejs
@@ -116,10 +116,8 @@
             </div>
             <div class="col"></div>
         </div>
-        <div class="row">
-            <div class="col text-center">
-                <button id="bookBtn" type="button" class="btn btn-dark">Book to the Event!</button>
-            </div>
+        <div id="bottomContainer" class="row">
+            
         </div>
     </div>
 
