faq in event's page

--- a/public/pages/artisticEvent.ejs
+++ b/public/pages/artisticEvent.ejs
@@ -92,23 +92,23 @@
             <div class="col"></div>
             <div class="col-8 align-items-center">
                 <div class="card">
-                    <div class="card-header" panel-id="question-0">Panel Heading</div>
+                    <div id="q0" class="card-header" panel-id="question-0">Panel Heading</div>
                     <div id="question-0" class="card-body collapse">
                         Content
                     </div>
-                    <div class="card-header" panel-id="question-1">Panel Heading</div>
+                    <div id="q1" class="card-header" panel-id="question-1">Panel Heading</div>
                     <div id="question-1" class="card-body collapse">
                         Content
                     </div>
-                    <div class="card-header" panel-id="question-2">Panel Heading</div>
+                    <div id="q2" class="card-header" panel-id="question-2">Panel Heading</div>
                     <div id="question-2" class="card-body collapse">
                         Content
                     </div>
-                    <div class="card-header" panel-id="question-3">Panel Heading</div>
+                    <div id="q3" class="card-header" panel-id="question-3">Panel Heading</div>
                     <div id="question-3" class="card-body collapse">
                         Content
                     </div>
-                    <div class="card-header" panel-id="question-4">Panel Heading</div>
+                    <div id="q4" class="card-header" panel-id="question-4">Panel Heading</div>
                     <div id="question-4" class="card-body collapse">
                         Content
                     </div>
@@ -117,7 +117,7 @@
             <div class="col"></div>
         </div>
         <div id="bottomContainer" class="row">
-            
+
         </div>
     </div>
 
