--- a/public/pages/reservationInfo.ejs
+++ b/public/pages/reservationInfo.ejs
@@ -23,7 +23,7 @@
                     globe to help finance good causes.
                 </h5>
             </div>
-            <div class="row centralizedd-flex flex-row justify-content-center">
+            <div class="d-flex flex-row justify-content-center">
                 <h2 class="title">Were can you find us?</h2>
             </div>
             <div class="d-flex flex-row justify-content-center">
