--- a/public/pages/performer.ejs
+++ b/public/pages/performer.ejs
@@ -20,8 +20,8 @@
                 <div class="card">
                     <div class="card-header">
                         <div class="d-flex justify-content-center">
-                            <div class="photo-container">
-                                <img src="/images/HarryPotter.jpg" class="performer-img">
+                            <div class="photo-container" id="headImage">
+
                             </div>
                             <div class="header-container">
                                 <div class="d-flex justify-content-center">
@@ -34,11 +34,12 @@
                         </div>
                     </div>
                     <div class="card-body">
-                        <p><span  class="font-weight-bold">Age:</span><span id="age" class="font-weight-light">
-                                </span></p>
+                        <p><span class="font-weight-bold">Age:</span><span id="age" class="font-weight-light">
+                            </span></p>
                         <p><span class="font-weight-bold">Born in:</span><span id="birth" class="font-weight-light">
-                                </span></p>
- 
+                            </span></p>
+                        <p id="achievements"></p>
+
                     </div>
                     <hr>
                     <p id="followName" class="centralized subtitle">Follow J.K.Rowling on social media!</p>
@@ -55,38 +56,12 @@
         <div class="s-wrapper centralized">
             <div id="quote-wrapper">
                 <div class="quote"><i class="fa fa-quote-left fa-4x"></i></div>
-                <blockquote>
-                    <p id="cit1" class="subtitle">La mia ragazza mi piace come il caffè:</p>
-                    <p id="cit2" class="subtitle">Senza il cazzo di qualcun altro dentro</p>
-                </blockquote>
+                <h1 class="title">Photo Gallery</h1>
             </div>
 
             <div id="slider-container" class="container">
                 <div id="slider" class="carousel slide">
-                    <ol class="carousel-indicators">
-                        <li data-target="#slider" data-slide-to="0" class="active"></li>
-                        <li data-target="#slider" data-slide-to="1"></li>
-                        <li data-target="#slider" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="/images/chicago.jpg" alt="First slide">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="/images/la.jpg" alt="Second slide">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="/images/ny.jpg" alt="Third slide">
-                        </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#slider" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#slider" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
+
                 </div>
             </div>
         </div>
@@ -95,8 +70,8 @@
             <div class="col"></div>
             <div class="col-8">
                 <div class="description-wrapper centralized">
-                    <h2 id="moreAbout" class="title"></h2>
-                    <p id="description">                    
+                    <h2 id="moreAbout" class="title-dark"></h2>
+                    <p id="description">
                     </p>
                 </div>
             </div>
@@ -110,7 +85,7 @@
                     <h2 id="findAuthor" class="title"></h2>
                     <div id="" class="row d-flex justify-content-center">
                         <div id="eventsContainer" class="event-box">
-                        </div>                        
+                        </div>
                     </div>
                 </div>
             </div>
