--- a/public/pages/includes/navbar.ejs
+++ b/public/pages/includes/navbar.ejs
@@ -21,7 +21,7 @@
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="/eventsTypes">Event Types</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="/event/today">What happens today</a>
+                        <a class="dropdown-item" href="/today">What happens today</a>
                     </div>
                 </li>
                 <li class="nav-item">
