--- a/public/pages/today.ejs
+++ b/public/pages/today.ejs
@@ -14,38 +14,16 @@
 
     <div class="container">
         <div class="d-flex flex-row justify-content-center">
-            <h1>20 August 2019, All Events</h1>
+            <h1 id="today">20 August 2019, All Events</h1>
         </div>
-        <div class="d-flex flex-row justify-content-center">
-            <div class="card">
-                <div class="card-header centralized">
-                    <h2><a class="title" href="#">Event 1</a></h2>
-                    <h4 class="subtitle">Event Type - 3 pm</h4>
-                </div>
-                <div class="card-body">
-                    <div class="d-flex flex-row justify-content-center">
-                        <img src="images/HarryPotter.jpg">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="d-flex flex-row justify-content-center">
-            <div class="card">
-                <div class="card-header centralized">
-                    <h2><a class="title" href="#">Event 2</a></h2>
-                    <h4 class="subtitle">Event Type - 4 pm</h4>
-                </div>
-                <div class="card-body">
-                    <div class="d-flex flex-row justify-content-center">
-                        <img src="images/HarryPotter.jpg">
-                    </div>
-                </div>
-            </div>
+        <div id="eventsContainer">
+
         </div>
     </div>
 
     <%- include('includes/footer.ejs') %>
-
+    <script src="/js/script.js"></script>
+    <script src="/js/today.js"></script>
 </body>
 
 </html>
