--- a/public/pages/eventsTypes.ejs
+++ b/public/pages/eventsTypes.ejs
@@ -13,7 +13,7 @@
         </ol>
     </nav>
 
-    <div id="container" class="container">
+    <div id="container" class="row justify-content-center">
         <div class="s-wrapper centralized">
             <div class="quote-wrapper">
                 <a href="/seminars"></a>
@@ -55,7 +55,8 @@
 
             <h4 class="footcard">Click <a href="/seminars">here</a> to get to the list of events
                 of this type taking place in
-                this festival!</h4>
+                this festival!
+            </h4>
         </div>
     </div>
 
