--- a/public/pages/home.ejs
+++ b/public/pages/home.ejs
@@ -29,6 +29,7 @@
     <script src="/js/script.js"></script>
 
     <!--    <script src="/js/postTest.js"></script> -->
+    <script src="/js/postTest.js"></script>
 </body>
 
 </html>
