--- a/public/pages/performerGroup.ejs
+++ b/public/pages/performerGroup.ejs
@@ -13,11 +13,16 @@
         </ol>
     </nav>
 
-    <div class="d-flex flex-row justify-content-center">
-        <h1 id="h1Title" class="title"></h1>
-    </div>
-    <div id="performersContainer">
-        
+    <div class="container">
+        <div class="row">
+            <div class="col"></div>
+            <div class="col">
+                <div class="row justify-content-center" id="performersContainer">
+                    <h1 id="h1Title" class="title"></h1>
+                </div>
+            </div>
+            <div class="col"></div>
+        </div>
     </div>
 
     <%- include('includes/footer.ejs') %>
