--- a/public/assets/css/calendar.css
+++ b/public/assets/css/calendar.css
@@ -9,11 +9,11 @@
 
 .card {
     background-color: black;
-    border-radius: 5px;
+    border-radius: 15px;
+    width: 550px;
 }
 
 /* card-header */
-
 .title {
     color: rgb(161, 130, 71);
 }
