--- a/public/assets/css/performer.css
+++ b/public/assets/css/performer.css
@@ -103,6 +103,7 @@ a.icoInstagram {
     margin-right: 0px;
     margin-top: 50px;
     background-color: black;
+    border-radius: 15px;
 }
 
 /* quote wrapper */
@@ -111,6 +112,7 @@ a.icoInstagram {
     font-size: 40px;
     margin-left: 0;
     margin-right: 0;
+    border-radius: 15px;
 }
 
 #slider-container {
@@ -131,6 +133,7 @@ a.icoInstagram {
     border-radius: 5px;
     border: solid 4px wheat;
     padding-top: 20px;
+    border-radius: 15px;
 }
 
 .event-box {
