--- a/public/assets/css/performerGroup.css
+++ b/public/assets/css/performerGroup.css
@@ -10,6 +10,11 @@
     padding-bottom: 20px;
 }
 
+.col {
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
 .performer-name {
     color: rgb(190, 166, 120);
 }
@@ -27,13 +32,13 @@
 }
 
 .wrapper {
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.952);
     border-radius: 25px;
-    border: solid 4px wheat;
-    width: 800px;
-    padding-top: 20px;
-    padding-left: 10px;
-    padding-right: 10px;
+    border: solid 4px rgb(0, 0, 0);
+    width: 500px;
+    padding-top: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
     margin-top: 30px;
 }
 
