--- a/public/pages/artisticEvent.ejs
+++ b/public/pages/artisticEvent.ejs
@@ -38,9 +38,9 @@
     </div>
 
     <div class="container">
-        <div class="row">
+        <div class="row justify-content-center">
             <div class="col"></div>
-            <div class="col-12">
+            <div class="col">
                 <div class="centralized artist-wrapper">
                     <h2 class="wheat-item">Featuring:</h2>
                     <div id="featuringBox" class="row d-flex justify-content-center">
@@ -53,7 +53,7 @@
 
         <div class="row">
             <div class="col"></div>
-            <div class="col-12">
+            <div class="col">
                 <div class="centralized artist-wrapper">
                     <h2 class="wheat-item">Other Events The Same Day:</h2>
                     <div id="eventsContainer" class="row d-flex justify-content-center">
@@ -66,7 +66,7 @@
 
         <div class="row">
             <div class="col"></div>
-            <div id="seminarContainer" class="col-12">
+            <div id="seminarContainer" class="col">
 
             </div>
             <div class="col"></div>
