--- a/public/pages/eventsByType.ejs
+++ b/public/pages/eventsByType.ejs
@@ -14,7 +14,7 @@
         </ol>
     </nav>
     
-    <div id="container" class="container">
+    <div id="container" class="row justify-content-center">
 
     </div>
 
