--- a/public/pages/eventsTypes.ejs
+++ b/public/pages/eventsTypes.ejs
@@ -7,18 +7,19 @@
     <%- include('includes/navbar.ejs') %>
     <nav class="crumb" aria-label="breadcrumb">
         <ol class="breadcrumb crumb">
-            <li class="breadcrumb-item" aria-current="page"><a class="bc-item" href="#">Home</a></li>
-            <li class="breadcrumb-item" aria-current="page"><a class="bc-item" href="#">Performers</a></li>
-            <li class="breadcrumb-item bc-active" aria-current="page">Derren Brown</li>
+            <li class="breadcrumb-item" aria-current="page"><a class="bc-item" href="/">Home</a></li>
+            <li class="breadcrumb-item bc-active" aria-current="page">Event Types</li>
         </ol>
     </nav>
 
     <div id="container" class="row justify-content-center">
         <div class="s-wrapper centralized">
             <div class="quote-wrapper">
-                <a href="/seminars"></a>
-                <h1 class="title">Seminar</h1></a>
-                <p class="subtitle"> This seminars introduce a lot of interesting event, if you want to find the right
+                <a href="/seminars">
+                    <h1 class="title">Seminar</h1>
+                </a>
+                <p class="subtitle type-description"> This seminars introduce a lot of interesting event, if you want to
+                    find the right
                     event for you just try to follow one of these seminars</p>
             </div>
 
