--- a/public/pages/calendar.ejs
+++ b/public/pages/calendar.ejs
@@ -8,8 +8,7 @@
     <nav class="crumb" aria-label="breadcrumb">
         <ol class="breadcrumb crumb">
             <li class="breadcrumb-item" aria-current="page"><a class="bc-item" href="#">Home</a></li>
-            <li class="breadcrumb-item" aria-current="page"><a class="bc-item" href="#">Performers</a></li>
-            <li class="breadcrumb-item bc-active" aria-current="page">Derren Brown</li>
+            <li class="breadcrumb-item bc-active" aria-current="page">Calendar</li>
         </ol>
     </nav>
 
