--- a/public/pages/home.ejs
+++ b/public/pages/home.ejs
@@ -12,16 +12,16 @@
         </ol>
     </nav>
 
-    <img id="main-img" src="images/home.jpg">
+    <img id="main-img" src="images/home.jpg" alt="really colorefull image">
 
     <div class="d-flex flex-row justify-content-center">
         <div id="main-txt">
-            <h1 class="white">Most Popular Festival In Miami!</h1>
-            <h2 class="white">Don't Miss It!</h2>
+            <h1 class="white home-img-text">Most Popular Festival In Miami!</h1>
+            <h2 class="white home-img-text">Don't Miss It!</h2>
         </div>
     </div>
 
-    <div class="container mt-5">
+    <div class="container mt-5 home-bottom-container">
         <h1 class="display-4 text-center mt-5">Don't miss the 10th iteration of the most popular festival in Miami!</h1>
     </div>
 
