--- a/public/pages/includes/footer.ejs
+++ b/public/pages/includes/footer.ejs
@@ -1,9 +1,10 @@
     <footer class="footer">
         <div class="container">
             <div class="row">
-                <div class="col-4 text-center"><a href="#" class="footer-line">FAQ</a></div>
+                <div class="col-4 text-center"><a href="/reservationInfo" class="footer-line">How to book an Event</a>
+                </div>
                 <div class="col-4 text-center"><a href="#" class="footer-line">Who We Are</a></div>
-                <div class="col-4 text-center"><a href="#" class="footer-line">Contact Us</a></div>
+                <div class="col-4 text-center"><a href="/contactUs" class="footer-line">Contact Us</a></div>
             </div>
             <hr style="background-color: white;">
             <div class="d-flex flex-row justify-content-center">
