--- a/public/pages/includes/navbar.ejs
+++ b/public/pages/includes/navbar.ejs
@@ -16,13 +16,16 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle wheat-item wheat-link" href="#" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events</a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <div class="dropdown-menu">
                         <a class="dropdown-item" href="/calendar">Calendar</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="/eventsTypes">Event Types</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="/today">What happens today</a>
                     </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link wheat-item wheat-link" href="/seminars">Seminars</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link wheat-item wheat-link" href="/performers">Performers</a>
