--- a/public/assets/css/eventsByType.css
+++ b/public/assets/css/eventsByType.css
@@ -52,7 +52,7 @@
 
 .carousel-item img {
     height: 350px;
-    width: 960px;
+    width: 100%;
     border-radius: 5px;
     border: solid 2px rgb(180, 165, 138);
 }
