--- a/public/pages/eventsByType.ejs
+++ b/public/pages/eventsByType.ejs
@@ -8,12 +8,13 @@
 
     <nav class="crumb" aria-label="breadcrumb">
         <ol class="breadcrumb crumb">
-            <li class="breadcrumb-item" aria-current="page"><a class="bc-item" href="#">Home</a></li>
-            <li class="breadcrumb-item" aria-current="page"><a class="bc-item" href="#">Events' Types</a></li>
-            <li class="breadcrumb-item bc-active" aria-current="page">Events By Type X</li>
+            <li class="breadcrumb-item" aria-current="page"><a class="bc-item" href="/">Home</a></li>
+            <li class="breadcrumb-item" aria-current="page"><a class="bc-item" href="/eventsTypes">Events' Types</a>
+            </li>
+            <li class="breadcrumb-item bc-active" aria-current="page" id="actual-breadcrumb">Events By Type X</li>
         </ol>
     </nav>
-    
+
     <div id="container" class="row justify-content-center">
 
     </div>
