--- a/public/pages/seminars.ejs
+++ b/public/pages/seminars.ejs
@@ -8,9 +8,10 @@
 
     <nav class="crumb" aria-label="breadcrumb">
         <ol class="breadcrumb crumb">
-            <li class="breadcrumb-item" aria-current="page"><a class="bc-item" href="#">Home</a></li>
-            <li class="breadcrumb-item" aria-current="page"><a class="bc-item" href="#">Events' Types</a></li>
-            <li class="breadcrumb-item bc-active" aria-current="page">Events By Type X</li>
+            <li class="breadcrumb-item" aria-current="page"><a class="bc-item" href="/">Home</a></li>
+            <li class="breadcrumb-item" aria-current="page"><a class="bc-item" href="/eventsTypes">Events' Types</a>
+            </li>
+            <li class="breadcrumb-item bc-active" aria-current="page">Seminars</li>
         </ol>
     </nav>
 
