--- a/public/pages/eventsByType.ejs
+++ b/public/pages/eventsByType.ejs
@@ -15,9 +15,13 @@
         </ol>
     </nav>
 
-    <div id="container" class="row justify-content-center">
-
+    <div class="col"></div>
+    <div class="col">
+        <div id="container" class="row justify-content-center">
+        </div>
     </div>
+    <div class="col"></div>
+    
 
     <%- include('includes/footer.ejs') %>
     <script src="/js/script.js"></script>
