fix navbar after login

--- a/public/pages/includes/navbar.ejs
+++ b/public/pages/includes/navbar.ejs
@@ -9,7 +9,7 @@
             <span></span>
         </button>
         <div id="navbar-list" class="collapse navbar-collapse">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav" id="navbar-ul">
                 <li class="nav-item">
                     <a class="nav-link active" href="/">Home</a>
                 </li>
