--- a/public/pages/seminars.ejs
+++ b/public/pages/seminars.ejs
@@ -15,8 +15,12 @@
         </ol>
     </nav>
 
-    <div id="container" class="container">
+    <div class="row">
+        <div class="col"></div>
+        <div id="container" class="col">
 
+        </div>
+        <div class="col"></div>
     </div>
 
     <%- include('includes/footer.ejs') %>
