event list in performer's page fixed

--- a/public/pages/performer.ejs
+++ b/public/pages/performer.ejs
@@ -82,7 +82,7 @@
                 <div class="centralized event-wrapper">
                     <h2 id="findAuthor" class="title"></h2>
                     <div id="" class="row d-flex justify-content-center">
-                        <div id="eventsContainer" class="event-box">
+                        <div id="eventsContainer" class= "row justify-content-center">
                         </div>
                     </div>
                 </div>
